--- a/english/about-me-en.html
+++ b/english/about-me-en.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <nav class="logo">
-                <a href="../index-en.html">Home</a>
+                <a href="../index.html">Home</a>
                 <a href="#">About Me</a>
                 <a href="/english/article-en.html">Articles</a>
                 <a href="/spanish/index-es.html", class="switch">Spanich</a>
