--- a/spanish/index-es.html
+++ b/spanish/index-es.html
@@ -16,7 +16,7 @@
                 <a href="#">Inicio</a>
                 <a href="/spanish/abuot-me-es.html">Sobre mi</a>
                 <a href="/spanish/article-es.html">Articulos</a>
-                <a href="../index-en.html">English</a>
+                <a href="../index.html">English</a>
             </nav>
             <div class="rrss">
                 <a href="https://www.linkedin.com/in/wilsonmedinacardenas", target="_blank" class="fa fa-linkedin"></a>
