--- a/spanish/article-es.html
+++ b/spanish/article-es.html
@@ -17,7 +17,7 @@
                 <a href="index-es.html">Inicio</a>
                 <a href="abuot-me-es.html">Sobre mi</a>
                 <a href="#">Articulos</a>
-                <a href="../index-en.html">Ingles</a>
+                <a href="../index.html">Ingles</a>
             </nav>
             <div class="rrss">
                 <a href="https://www.linkedin.com/in/wilsonmedinacardenas" , target="_blank" class="fa fa-linkedin"></a>
