--- a/spanish/abuot-me-es.html
+++ b/spanish/abuot-me-es.html
@@ -14,9 +14,9 @@
     <header>
         <div class="container">
             <nav class="logo">
-                <a href="index-es.html">Inicio</a>
+                <a href="spanich/index-es.html">Inicio</a>
                 <a href="#">Sobre mi</a>
-                <a href="article-es.html">Articulos</a>
+                <a href="spanich/article-es.html">Articulos</a>
                 <a href="../index.html">Ingles</a>
             </nav>
             <div class="rrss">
