changes on the rules

--- a/english/article-en.html
+++ b/english/article-en.html
@@ -15,9 +15,9 @@
         <div class="container">
             <nav class="logo">
                 <a href="../index.html">Home</a>
-                <a href="english/about-me-en.html">About Me</a>
-                <a href="english/#">Articles</a>
-                <a href="spanish/index-es.html", class="switch">Spanich</a>
+                <a href="/english/about-me-en.html">About Me</a>
+                <a href="/english/#">Articles</a>
+                <a href="/spanish/index-es.html", class="switch">Spanich</a>
             </nav>
             <div class="rrss">
                 <a href="https://www.linkedin.com/in/wilsonmedinacardenas" , target="_blank" class="fa fa-linkedin"></a>
