--- a/spanish/article-es.html
+++ b/spanish/article-es.html
@@ -14,8 +14,8 @@
     <header>
         <div class="container">
             <nav class="logo">
-                <a href="spanish/index-es.html">Inicio</a>
-                <a href="spanich/abuot-me-es.html">Sobre mi</a>
+                <a href="/spanish/index-es.html">Inicio</a>
+                <a href="/spanich/abuot-me-es.html">Sobre mi</a>
                 <a href="#">Articulos</a>
                 <a href="../index.html">Ingles</a>
             </nav>
