--- a/spanish/index-es.html
+++ b/spanish/index-es.html
@@ -14,8 +14,8 @@
         <div class="container">
             <nav class="logo">
                 <a href="#">Inicio</a>
-                <a href="spanish/abuot-me-es.html">Sobre mi</a>
-                <a href="spanish/article-es.html">Articulos</a>
+                <a href="/spanish/abuot-me-es.html">Sobre mi</a>
+                <a href="/spanish/article-es.html">Articulos</a>
                 <a href="../index.html">English</a>
             </nav>
             <div class="rrss">
