second changes on the rules

--- a/english/about_me_en.html
+++ b/english/about_me_en.html
@@ -16,8 +16,8 @@
             <nav class="logo">
                 <a href="../index.html">Home</a>
                 <a href="#">About Me</a>
-                <a href="/english/article-en.html">Articles</a>
-                <a href="/spanish/index-es.html", class="switch">Spanich</a>
+                <a href="/english/article_en.html">Articles</a>
+                <a href="/spanish/index_es.html", class="switch">Spanich</a>
             </nav>
             <div class="rrss">
                 <a href="https://www.linkedin.com/in/wilsonmedinacardenas" , target="_blank" class="fa fa-linkedin"></a>
