--- a/index_es.html
+++ b/index_es.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wilson Medina</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,9 +14,9 @@
         <div class="container">
             <nav class="logo">
                 <a href="#">Inicio</a>
-                <a href="/spanish/abuot_me_es.html">Sobre mi</a>
-                <a href="/spanish/article_es.html">Articulos</a>
-                <a href="../index.html">English</a>
+                <a href="abuot_me_es.html">Sobre mi</a>
+                <a href="article_es.html">Articulos</a>
+                <a href="index.html">English</a>
             </nav>
             <div class="rrss">
                 <a href="https://www.linkedin.com/in/wilsonmedinacardenas", target="_blank" class="fa fa-linkedin"></a>
