--- a/about_me_en.html
+++ b/about_me_en.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wilson Medina</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
         <div class="container">
             <nav class="logo">
-                <a href="../index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#">About Me</a>
-                <a href="/english/article_en.html">Articles</a>
-                <a href="/spanish/index_es.html", class="switch">Spanich</a>
+                <a href="article_en.html">Articles</a>
+                <a href="index_es.html", class="switch">Spanich</a>
             </nav>
             <div class="rrss">
                 <a href="https://www.linkedin.com/in/wilsonmedinacardenas" , target="_blank" class="fa fa-linkedin"></a>
