--- a/abuot_me_es.html
+++ b/abuot_me_es.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wilson Medina</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
         <div class="container">
             <nav class="logo">
-                <a href="/spanish/index_es.html">Inicio</a>
-                <a href="/spanish/#">Sobre mi</a>
-                <a href="/spanish/article_es.html">Articulos</a>
-                <a href="../index.html">Ingles</a>
+                <a href="index_es.html">Inicio</a>
+                <a href="#">Sobre mi</a>
+                <a href="article_es.html">Articulos</a>
+                <a href="index.html">Ingles</a>
             </nav>
             <div class="rrss">
                 <a href="https://www.linkedin.com/in/wilsonmedinacardenas" , target="_blank" class="fa fa-linkedin"></a>
