--- a/funtion_es.html
+++ b/funtion_es.html
@@ -8,6 +8,7 @@
     <title>Wilson Medina</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/machinelearning.ico" type="image/x-icon">
 </head>
 
 <body>
