add section aboutme to index

--- a/index.html
+++ b/index.html
@@ -30,6 +30,91 @@
     <section id="hero">
     </section>
 
+    <section id="about">
+        <div class="container">
+            <div class="about-photo">
+            </div>
+            <div class="about-texto">
+                <p>
+                    I am <strong>Wilson Medina Cárdenas</strong>, Venezuelan by birth, resident of the world and for a
+                    little over 7
+                    years I have lived in the beautiful city of Santiago de Chile.
+                </p>
+                <p>
+                    Much of my time is spent studying and teaching technology, statistics, and mathematics. oh!
+                    and not least, to share with my dogs Nesky and kuky. I love them!
+                </p>
+                <p>
+                    But it has not always been like this, my life in the last decade has gone through different stages
+                    that have
+                    helped me grow as a person and get me to where I am now.
+                </p>
+                <p>
+                    It has been like a roller coaster with exciting ups and terrifying downs, the love for
+                    my <strong>family</strong> in Venezuela, and knowing that I am part of their economic and emotional
+                    sustenance,
+                    is what in these
+                    terrifying descents has not made me lose consciousness to the point of fainting.
+                </p>
+                <p>
+                    As a child my greatest passion was soccer, I lived for and to play it, discipline helped me to reach
+                    those training sessions and games despite living almost 2 hours away, always parallel to
+                    my studies, but with the faithful conviction that I would play at a professional level. That until
+                    the age of 17,
+                    when I had a severe fall while playing a match, which resulted in an injury that I did not
+                    I recovered but after 5 years; It was at that moment when I hit the harsh reality and
+                    my dreams collapsed
+                </p>
+                <p>
+                    At the age of 22, I entered the university to study administration specializing in
+                    <strong>Marketing</strong>, when
+                    I was about to complete the cycle of professional subjects to be able to graduate, I had to be part
+                    of
+                    Venezuelan migrants.
+                </p>
+                <p>
+                    Arriving in another country to work and being able to fulfill my commitments as a resident of this
+                    one, I force myself
+                    for a long time to not being able to study; I could only work very hard &#128170; and without rest,
+                    Only that
+                    formula I take with my <strong>wife</strong> to have savings that I later invested in an SME of
+                    transport and then transformed
+                    at a food distributor.
+                </p>
+                <p>
+                    It has been this stage that introduced me to many <strong>valuable people</strong> in my life,
+                    people that i
+                    taught a lot and what I value most of those teachings is having discovered the beautiful and
+                    infinite
+                    world of <strong>technology</strong> &#128187;. That world that does not stop, that teaches you to
+                    something new every day, that world
+                    that keeps you in constant harmony, peace and growth, that world for which today I have the same
+                    emotions, commitments and discipline of that Wilson who played soccer as a child.
+                </p>
+                <p>
+                    At present I resumed my distance studies at the same university, I am already studying the
+                    Last year of administration, but specialized in <strong>Computer Science</strong>. In parallel, as
+                    <strong>self taught</strong> i have
+                    learned a lot about various topics and it has also been an alternative that, despite not being the
+                    traditional has taught me my greatest skills.
+                </p>
+                <p>
+                    It is at this point in my life that <strong>Steve Jobs's</strong> speech where he leaves us a
+                    valuable lesson comes to mind the most:
+                </p>
+                <blockquote><cite>“You can't connect the dots looking forward, you can only do it looking back”</cite></blockquote>
+                <p>
+                    Just looking back is what helps me understand why I couldn't play professional soccer,
+                    because I couldn't finish my university degree at that time, because I had to be a migrant,
+                    because I met such valuable people. It is uniting all these points that gives me an answer and a
+                    reason for
+                    life in the present.
+                </p>
+                <blockquote><cite>“Genius is made with 1% talent and 99% work”</cite></blockquote>
+                <p><b><cite>Albert Einstein</cite></b></p>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="container">
             <p>&copy; 2023 Developed with <i class="fa fa-heart"></i> by Wilson Medina Cárdenas</p>
