--- a/index_es.html
+++ b/index_es.html
@@ -30,6 +30,88 @@
     <section id="hero">
     </section>
 
+    <section id="about">
+        <div class="container">
+            <div class="about-photo">
+            </div>
+            <div class="about-texto">
+                <p>
+                    Soy <strong>Wilson Medina Cárdenas</strong> venezolano de nacimiento residente del mundo y
+                    desde hace un poco más de 7 años vivo en
+                    la hermosa ciudad de Santiago de Chile.
+                </p>
+                <p>
+                    Gran parte de mi tiempo lo dedico a estudiar y enseñar tecnologías, estadísticas y matemáticas. ¡Ah!
+                    y no menos importante, a compartir con mis perritas Nesky y kuky ¡Las amo!
+                </p>
+                <p>
+                    Pero no siempre ha sido así, mi vida en la última década ha pasado por diferentes etapas que me han
+                    ayudado a crecer como persona y a llegar justo a donde me encuentro ahora.
+                </p>
+                <p>
+                    Ha sido como una montaña rusa con subidas emocionantes y bajadas aterradoras, el amor por
+                    mi
+                    <strong>familia</strong> en Venezuela, y saber que soy parte de su sustento económico y emocional,
+                    es lo que en estas
+                    bajadas aterradoras no me ha hecho perder la conciencia al punto de desmayar.
+                </p>
+                <p>
+                    De niño mi mayor pasión era el futbol, vivía por y para jugarlo, la disciplina me ayudo a llegar a
+                    esos entrenamientos y partidos a pesar de vivir a casi 2 horas de distancia, siempre en paralelo a
+                    mis estudios, pero con la fiel convicción de que jugaría a nivel profesional. Eso hasta los 17 años,
+                    cuando tuve una fuerte caída jugando un partido, que trajo como consecuencia una lesión de la que no
+                    me recuperé sino después de 5 años; fue en ese momento cuando me di un golpe con la cruda realidad y
+                    mis sueños se derrumbaron.
+                </p>
+                <p>
+                    A los 22 años ingresé a la universidad a estudiar administración especializada en
+                    <strong>Mercadeo</strong>, ya cuando
+                    estaba por completar el ciclo de materias profesionales para poder titularme, tuve que ser parte de
+                    los migrantes venezolanos.
+                </p>
+                <p>
+                    Llegar a otro país a trabajar y poder cumplir con mis compromisos como residente de este, me obligo
+                    por un gran tiempo a no poder estudiar; solo podía trabajar muy fuerte &#128170; y sin descanso,
+                    solo esa
+                    fórmula me llevo junto a mi <strong>esposa</strong> tener ahorros que luego invertí en una pyme de
+                    transporte y luego se transformó
+                    en una distribuidora de alimentos.
+                </p>
+                <p>
+                    Ha sido esta etapa la que me presentó a muchas <strong>personas valiosas</strong> en mi vida,
+                    personas que me
+                    enseñaron mucho y lo que más valoro de esas enseñanzas es haber descubierto el hermoso e infinito
+                    mundo de la <strong>tecnología</strong> &#128187;. Ese mundo que no se detiene, que te enseña a
+                    diario algo nuevo, ese mundo
+                    que te mantiene en constante armonía, paz y crecimiento, ese mundo por el cual hoy tengo las mismas
+                    emociones, compromisos y disciplina de aquel Wilson que jugaba al futbol de niño.
+                </p>
+                <p>
+                    En la actualidad retomé mis estudios a distancia en la misma universidad, ya estoy cursando el
+                    último año de administración, pero especializada en <strong>Informática</strong>. En paralelo, como
+                    <strong>autodidacta</strong> he
+                    aprendido mucho de diversos temas y ha sido también una alternativa que a pesar de no ser lo
+                    tradicional me ha enseñado mis mayores habilidades.
+                </p>
+                <p>
+                    En este punto de mi vida es cuando más viene a mi mente ese discurso de <strong><cite>Steve
+                            Jobs</cite></strong> donde nos deja una valiosa enseñanza:
+                </p>
+                <blockquote><cite>“No puedes conectar los puntos mirando hacia adelante, solo puedes hacerlo mirando hacia
+                    atrás”</cite></blockquote>
+                <p>
+                    Justamente mirar hacia atrás es lo que me ayuda a entender por qué no pude jugar futbol profesional,
+                    porque no pude terminar mi carrera universitaria en ese momento, porque tuve que ser migrante,
+                    porque conocí a tan valiosas personas. Es unir todos esos puntos lo que me da respuesta y razón de
+                    vida en el presente.
+                </p>
+                <blockquote><cite>“La genialidad se hace con un 1% de talento y un 99% de trabajo”</cite></blockquote>
+                <p><b><cite>Albert Einstein</cite></b></p>
+            </div>
+        </div>
+    </section>
+
+
     <footer>
         <div class="container">
             <p>&copy; 2023 Desarrollado con <i class="fa fa-heart"></i> por Wilson Medina Cárdenas</p>
