add changes to styles

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
     <section id="hero">
     </section>
 
+    <section class="about-photo">
+    </section>
+
     <section id="about">
         <div class="container">
-            <div class="about-photo">
-            </div>
             <div class="about-texto">
                 <p>
                     I am <strong>Wilson Medina Cárdenas</strong>, Venezuelan by birth, resident of the world and for a
@@ -115,6 +116,7 @@
             </div>
         </div>
     </section>
+    
     <footer>
         <div class="container">
             <p>&copy; 2023 Developed with <i class="fa fa-heart"></i> by Wilson Medina Cárdenas</p>
