--- a/index_es.html
+++ b/index_es.html
@@ -30,10 +30,11 @@
     <section id="hero">
     </section>
 
+    <section class="about-photo">
+    </section>
+
     <section id="about">
         <div class="container">
-            <div class="about-photo">
-            </div>
             <div class="about-texto">
                 <p>
                     Soy <strong>Wilson Medina Cárdenas</strong> venezolano de nacimiento residente del mundo y
