--- a/about_me_en.html
+++ b/about_me_en.html
@@ -8,7 +8,7 @@
     <title>Wilson Medina</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/machinelearning.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/iconwilson.ico" type="image/x-icon">
 </head>
 
 <body>
